chore: 添加服务人员分类页面及优化首页、详情页逻辑